# lesson-sql

./: .gitignore  README.md  alembic.ini  pyproject.toml  tasks.py
alembic/: env.py
alembic/versions/: 0faaadc4c1f1_initial_migration.py  2130c652f099_initial_migration.py
tasks_app/: model.py
