[project]
name = "lesson_sql"
version = "0.1.0"
description = ""
authors = [
    {name = "dasha",email = "dashapronina02@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "py-singleton (>=1.0.0,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
